Backed to jdk8 to run in production (jdk11 worked fine lately, but deployment will be easier if we'd keep using java 8)