@@ -43,9 +43,9 @@
     <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
     <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
     <jaxb-runtime.version>2.4.0-b180830.0438</jaxb-runtime.version>
-    <jvm.options>-Xmx3g -Dfile.encoding=UTF-8 --illegal-access=permit -ea</jvm.options>
+    <jvm.options>-Xmx3g -Dfile.encoding=UTF-8 -ea</jvm.options>
     <agent>${settings.localRepository}/org/springframework/spring-instrument/${spring.version}/spring-instrument-${spring.version}.jar</agent>
-    <java.version>10</java.version>
+    <java.version>8</java.version>
   </properties>
 
   <issueManagement>
@@ -162,7 +162,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <release>${java.version}</release>
+          <!--<release>${java.version}</release>-->
+          <target>${java.version}</target>
+          <source>${java.version}</source>
         </configuration>
       </plugin>
       <plugin>
